db-schedulerの依存関係を追加し、スケジュールされたタスク用のテーブルを作成するSQLスクリプトを追加

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<properties>
 		<java.version>24</java.version>
 		<axon.version>4.12.1</axon.version>
+		<db-scheduler.version>13.0.0</db-scheduler.version>
 	</properties>
 
 	<dependencyManagement>
@@ -57,6 +58,11 @@
 					<artifactId>axon-server-connector</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.github.kagkarlsson</groupId>
+			<artifactId>db-scheduler-spring-boot-starter</artifactId>
+			<version>${db-scheduler.version}</version>
 		</dependency>
 
 		<dependency>
